<resources>
    <string name="app_name">yummy</string>
    <string name="home">Home</string>
    <string name="exp">Explore\n</string>
    <string name="search">Search</string>
    <string name="fav">Favourites</string>
    <string name="cal">Calendar</string>
    <string name="acc">Account</string>
    <string name="default_web_client_id">248935884868-akv10f9km47rqm8nkmt4qvrf9mte6qrl.apps.googleusercontent.com</string>
    <string name="welcome">Welcome to Yummy!</string>
    <string name="guest">Continue as Guest</string>
    <string name="sign">Sign-In</string>
    <string name="siup">Sign-Up</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Log Out</string>
    <string name="surprise">Surprise Me!</string>
    <string name="ref">Refresh</string>
    <string name="sug">Suggested Meal</string>
    <string name="viewbycat" />
    <string name="day">Meal of the Day</string>
    <string name="view_by_category">View By Category</string>
    <string name="view_by_country">View By Country</string>
    <string name="view_by_ingredient">View By Ingredient</string>
    <string name="image_of_the_meal_of_the_day">Image of the meal of the day</string>
    <string name="meals">Meals</string>
    <string name="countries">Countries</string>
    <string name="categories">Categories</string>
    <string name="ingredients">Ingredients</string>
    <string name="ingredient">Ingredient</string>
    <string name="results">This view will hold the results of the search</string>
</resources>