<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAA613"
    android:padding="24dp"
    tools:context=".onboarding.view.OnBoarding">

    <!-- Logo -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:src="@mipmap/ic_launcher_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Welcome Text -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/welcome"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <!-- Email -->
    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="#FFFFFF"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:textColor="#550527"
        android:textColorHint="#550527"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <!-- Password -->
    <EditText
        android:id="@+id/editTextPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#FFFFFF"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColor="#550527"
        android:textColorHint="#550527"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextEmail" />

    <!-- Login Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_SignIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#F44708"
        android:text="@string/sign"
        android:textColor="#FFFFFF"
        app:cornerRadius="16dp"
        app:elevation="6dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_SignUp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextPass" />

    <!-- Sign Up Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_SignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#688E26"
        android:text="@string/siup"
        android:textColor="#FFFFFF"
        app:cornerRadius="16dp"
        app:elevation="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/btn_SignIn"
        app:layout_constraintTop_toBottomOf="@id/editTextPass" />

    <!-- Continue with Google -->
    <Button
        android:id="@+id/btn_google"
        style="@style/FirebaseUI.Button.AccountChooser.GoogleButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Continue with Google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_SignIn" />

    <!-- Continue as Guest -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_guest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#A10702"
        android:text="@string/guest"
        android:textColor="#FFFFFF"
        app:cornerRadius="16dp"
        app:elevation="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_google" />

    <ProgressBar
        android:id="@+id/loadingIndicator"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="63dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_guest" />

</androidx.constraintlayout.widget.ConstraintLayout>
